write outliers to kafka topic